Lab1/tests/lab1-testsuite/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 5 contains 1 shift/reduce conflicts.
state 56 contains 1 shift/reduce conflicts.
state 142 contains 1 shift/reduce conflicts.
state 207 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Program -> ListDef                                 (6)
	ListDef ->                                         (7)
	ListDef -> ListDef Def                             (8)
	Def -> Fun                                         (9)
	Def -> TDef ';'                                    (10)
	Def -> Var ';'                                     (11)
	Def -> Str ';'                                     (12)
	Def -> 'using' QConst ';'                          (13)
	Def -> 'inline' Fun                                (14)
	Fun -> Type Id '(' ListArg ')' ';'                 (15)
	Fun -> Type Id '(' ListArg ')' '{' ListStm '}'     (16)
	ListArg ->                                         (17)
	ListArg -> Arg                                     (18)
	ListArg -> Arg ',' ListArg                         (19)
	TDef -> 'typedef' Type Id                          (20)
	Str -> 'struct' Id '{' ListDec '}'                 (21)
	ListDec ->                                         (22)
	ListDec -> ListDec Dec ';'                         (23)
	Dec -> Type Id                                     (24)
	Dec -> 'const' Type Id                             (25)
	Dec -> Type Id '=' Exp                             (26)
	Dec -> 'const' Type Id '=' Exp                     (27)
	Arg -> Dec                                         (28)
	Arg -> Type                                        (29)
	Arg -> 'const' Type                                (30)
	Var -> Dec                                         (31)
	Var -> Type Id ',' ListId                          (32)
	ListId -> Id                                       (33)
	ListId -> Id ',' ListId                            (34)
	Stm -> Exp ';'                                     (35)
	Stm -> Var ';'                                     (36)
	Stm -> 'return' Exp ';'                            (37)
	Stm -> '{' ListStm '}'                             (38)
	Stm -> 'while' '(' Exp ')' Stm                     (39)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (40)
	Stm -> 'for' '(' Var ';' Exp ';' Exp ')' Stm       (41)
	Stm -> TDef ';'                                    (42)
	Stm -> Str ';'                                     (43)
	Stm -> 'if' '(' Exp ')' Stm                        (44)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (45)
	ListStm ->                                         (46)
	ListStm -> ListStm Stm                             (47)
	Exp16 -> Integer                                   (48)
	Exp16 -> Double                                    (49)
	Exp16 -> Char                                      (50)
	Exp16 -> ListString                                (51)
	Exp16 -> '(' Exp ')'                               (52)
	Exp15 -> QConst                                    (53)
	Exp15 -> Id '[' Exp ']'                            (54)
	Exp15 -> Id '(' ListExp ')'                        (55)
	Exp15 -> Exp16                                     (56)
	Exp14 -> Exp14 '.' Exp15                           (57)
	Exp14 -> Exp14 '->' Exp15                          (58)
	Exp14 -> Exp15 '++'                                (59)
	Exp14 -> '*' Exp15                                 (60)
	Exp14 -> Exp15                                     (61)
	Exp13 -> '++' Exp14                                (62)
	Exp13 -> '!' Exp14                                 (63)
	Exp13 -> Exp14                                     (64)
	Exp12 -> Exp12 '*' Exp13                           (65)
	Exp12 -> Exp12 '/' Exp13                           (66)
	Exp12 -> Exp12 '%' Exp13                           (67)
	Exp12 -> Exp13                                     (68)
	Exp11 -> Exp11 '+' Exp12                           (69)
	Exp11 -> Exp11 '-' Exp12                           (70)
	Exp11 -> Exp12                                     (71)
	Exp10 -> Exp10 '<<' Exp11                          (72)
	Exp10 -> Exp11 '>>' Exp10                          (73)
	Exp10 -> Exp11                                     (74)
	Exp9 -> Exp9 '<' Exp10                             (75)
	Exp9 -> Exp9 '>' Exp10                             (76)
	Exp9 -> Exp9 '<=' Exp10                            (77)
	Exp9 -> Exp9 '>=' Exp10                            (78)
	Exp9 -> Exp10                                      (79)
	Exp8 -> Exp8 '==' Exp9                             (80)
	Exp8 -> Exp8 '!=' Exp9                             (81)
	Exp8 -> Exp9                                       (82)
	Exp4 -> Exp4 '&&' Exp5                             (83)
	Exp4 -> Exp5                                       (84)
	Exp3 -> Exp3 '||' Exp4                             (85)
	Exp3 -> Exp4                                       (86)
	Exp2 -> Exp3 '=' Exp2                              (87)
	Exp2 -> Exp3 '+=' Exp2                             (88)
	Exp2 -> Exp3 '-=' Exp2                             (89)
	Exp2 -> Exp3 '?' Exp3 ':' Exp3                     (90)
	Exp2 -> Exp3                                       (91)
	Exp1 -> 'throw' Exp2                               (92)
	Exp1 -> Exp2                                       (93)
	ListExp ->                                         (94)
	ListExp -> Exp                                     (95)
	ListExp -> Exp ',' ListExp                         (96)
	ListString -> String                               (97)
	ListString -> String ListString                    (98)
	Exp -> Exp1                                        (99)
	Exp5 -> Exp6                                       (100)
	Exp6 -> Exp7                                       (101)
	Exp7 -> Exp8                                       (102)
	Const -> Id '<' ListType '>'                       (103)
	Const -> Id                                        (104)
	QConst -> ListConst                                (105)
	ListConst -> Const                                 (106)
	ListConst -> Const '::' ListConst                  (107)
	ListType -> Type                                   (108)
	ListType -> Type ',' ListType                      (109)
	Type -> 'void'                                     (110)
	Type -> 'bool'                                     (111)
	Type -> 'int'                                      (112)
	Type -> 'double'                                   (113)
	Type -> QConst                                     (114)
	Type -> Type '&'                                   (115)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<<'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'>>'           { PT _ (TS _ 28) }
	'?'            { PT _ (TS _ 29) }
	'['            { PT _ (TS _ 30) }
	']'            { PT _ (TS _ 31) }
	'bool'         { PT _ (TS _ 32) }
	'const'        { PT _ (TS _ 33) }
	'do'           { PT _ (TS _ 34) }
	'double'       { PT _ (TS _ 35) }
	'else'         { PT _ (TS _ 36) }
	'for'          { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'inline'       { PT _ (TS _ 39) }
	'int'          { PT _ (TS _ 40) }
	'return'       { PT _ (TS _ 41) }
	'struct'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'typedef'      { PT _ (TS _ 44) }
	'using'        { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	Id              rule  5
	Program         rule  6
	ListDef         rules 7, 8
	Def             rules 9, 10, 11, 12, 13, 14
	Fun             rules 15, 16
	ListArg         rules 17, 18, 19
	TDef            rule  20
	Str             rule  21
	ListDec         rules 22, 23
	Dec             rules 24, 25, 26, 27
	Arg             rules 28, 29, 30
	Var             rules 31, 32
	ListId          rules 33, 34
	Stm             rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	ListStm         rules 46, 47
	Exp16           rules 48, 49, 50, 51, 52
	Exp15           rules 53, 54, 55, 56
	Exp14           rules 57, 58, 59, 60, 61
	Exp13           rules 62, 63, 64
	Exp12           rules 65, 66, 67, 68
	Exp11           rules 69, 70, 71
	Exp10           rules 72, 73, 74
	Exp9            rules 75, 76, 77, 78, 79
	Exp8            rules 80, 81, 82
	Exp4            rules 83, 84
	Exp3            rules 85, 86
	Exp2            rules 87, 88, 89, 90, 91
	Exp1            rules 92, 93
	ListExp         rules 94, 95, 96
	ListString      rules 97, 98
	Exp             rule  99
	Exp5            rule  100
	Exp6            rule  101
	Exp7            rule  102
	Const           rules 103, 104
	QConst          rule  105
	ListConst       rules 106, 107
	ListType        rules 108, 109
	Type            rules 110, 111, 112, 113, 114, 115

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 7
	'const'        reduce using rule 7
	'double'       reduce using rule 7
	'inline'       reduce using rule 7
	'int'          reduce using rule 7
	'struct'       reduce using rule 7
	'typedef'      reduce using rule 7
	'using'        reduce using rule 7
	'void'         reduce using rule 7
	L_Id           reduce using rule 7
	%eof           reduce using rule 7

	Program        goto state 3
	ListDef        goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'-='           reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'>>'           reduce using rule 1
	'?'            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDef .                                (rule 6)
	ListDef -> ListDef . Def                            (rule 8)

	'bool'         shift, and enter state 16
	'const'        shift, and enter state 17
	'double'       shift, and enter state 18
	'inline'       shift, and enter state 19
	'int'          shift, and enter state 20
	'struct'       shift, and enter state 21
	'typedef'      shift, and enter state 22
	'using'        shift, and enter state 23
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25
	%eof           reduce using rule 6

	Id             goto state 5
	Def            goto state 6
	Fun            goto state 7
	TDef           goto state 8
	Str            goto state 9
	Dec            goto state 10
	Var            goto state 11
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 15

State 5

	Const -> Id . '<' ListType '>'                      (rule 103)
	Const -> Id .                                       (rule 104)

	'!='           reduce using rule 104
	'%'            reduce using rule 104
	'&'            reduce using rule 104
	'&&'           reduce using rule 104
	')'            reduce using rule 104
	'*'            reduce using rule 104
	'+'            reduce using rule 104
	'++'           reduce using rule 104
	'+='           reduce using rule 104
	','            reduce using rule 104
	'-'            reduce using rule 104
	'-='           reduce using rule 104
	'->'           reduce using rule 104
	'.'            reduce using rule 104
	'/'            reduce using rule 104
	':'            reduce using rule 104
	'::'           reduce using rule 104
	';'            reduce using rule 104
	'<'            shift, and enter state 38
			(reduce using rule 104)

	'<<'           reduce using rule 104
	'<='           reduce using rule 104
	'='            reduce using rule 104
	'=='           reduce using rule 104
	'>'            reduce using rule 104
	'>='           reduce using rule 104
	'>>'           reduce using rule 104
	'?'            reduce using rule 104
	']'            reduce using rule 104
	'||'           reduce using rule 104
	L_Id           reduce using rule 104


State 6

	ListDef -> ListDef Def .                            (rule 8)

	'bool'         reduce using rule 8
	'const'        reduce using rule 8
	'double'       reduce using rule 8
	'inline'       reduce using rule 8
	'int'          reduce using rule 8
	'struct'       reduce using rule 8
	'typedef'      reduce using rule 8
	'using'        reduce using rule 8
	'void'         reduce using rule 8
	L_Id           reduce using rule 8
	%eof           reduce using rule 8


State 7

	Def -> Fun .                                        (rule 9)

	'bool'         reduce using rule 9
	'const'        reduce using rule 9
	'double'       reduce using rule 9
	'inline'       reduce using rule 9
	'int'          reduce using rule 9
	'struct'       reduce using rule 9
	'typedef'      reduce using rule 9
	'using'        reduce using rule 9
	'void'         reduce using rule 9
	L_Id           reduce using rule 9
	%eof           reduce using rule 9


State 8

	Def -> TDef . ';'                                   (rule 10)

	';'            shift, and enter state 37


State 9

	Def -> Str . ';'                                    (rule 12)

	';'            shift, and enter state 36


State 10

	Var -> Dec .                                        (rule 31)

	';'            reduce using rule 31


State 11

	Def -> Var . ';'                                    (rule 11)

	';'            shift, and enter state 35


State 12

	ListConst -> Const .                                (rule 106)
	ListConst -> Const . '::' ListConst                 (rule 107)

	'!='           reduce using rule 106
	'%'            reduce using rule 106
	'&'            reduce using rule 106
	'&&'           reduce using rule 106
	')'            reduce using rule 106
	'*'            reduce using rule 106
	'+'            reduce using rule 106
	'++'           reduce using rule 106
	'+='           reduce using rule 106
	','            reduce using rule 106
	'-'            reduce using rule 106
	'-='           reduce using rule 106
	'->'           reduce using rule 106
	'.'            reduce using rule 106
	'/'            reduce using rule 106
	':'            reduce using rule 106
	'::'           shift, and enter state 34
	';'            reduce using rule 106
	'<'            reduce using rule 106
	'<<'           reduce using rule 106
	'<='           reduce using rule 106
	'='            reduce using rule 106
	'=='           reduce using rule 106
	'>'            reduce using rule 106
	'>='           reduce using rule 106
	'>>'           reduce using rule 106
	'?'            reduce using rule 106
	']'            reduce using rule 106
	'||'           reduce using rule 106
	L_Id           reduce using rule 106


State 13

	Type -> QConst .                                    (rule 114)

	'&'            reduce using rule 114
	')'            reduce using rule 114
	','            reduce using rule 114
	'>'            reduce using rule 114
	L_Id           reduce using rule 114


State 14

	QConst -> ListConst .                               (rule 105)

	'!='           reduce using rule 105
	'%'            reduce using rule 105
	'&'            reduce using rule 105
	'&&'           reduce using rule 105
	')'            reduce using rule 105
	'*'            reduce using rule 105
	'+'            reduce using rule 105
	'++'           reduce using rule 105
	'+='           reduce using rule 105
	','            reduce using rule 105
	'-'            reduce using rule 105
	'-='           reduce using rule 105
	'->'           reduce using rule 105
	'.'            reduce using rule 105
	'/'            reduce using rule 105
	':'            reduce using rule 105
	';'            reduce using rule 105
	'<'            reduce using rule 105
	'<<'           reduce using rule 105
	'<='           reduce using rule 105
	'='            reduce using rule 105
	'=='           reduce using rule 105
	'>'            reduce using rule 105
	'>='           reduce using rule 105
	'>>'           reduce using rule 105
	'?'            reduce using rule 105
	']'            reduce using rule 105
	'||'           reduce using rule 105
	L_Id           reduce using rule 105


State 15

	Fun -> Type . Id '(' ListArg ')' ';'                (rule 15)
	Fun -> Type . Id '(' ListArg ')' '{' ListStm '}'    (rule 16)
	Dec -> Type . Id                                    (rule 24)
	Dec -> Type . Id '=' Exp                            (rule 26)
	Var -> Type . Id ',' ListId                         (rule 32)
	Type -> Type . '&'                                  (rule 115)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 25

	Id             goto state 32

State 16

	Type -> 'bool' .                                    (rule 111)

	'&'            reduce using rule 111
	')'            reduce using rule 111
	','            reduce using rule 111
	'>'            reduce using rule 111
	L_Id           reduce using rule 111


State 17

	Dec -> 'const' . Type Id                            (rule 25)
	Dec -> 'const' . Type Id '=' Exp                    (rule 27)

	'bool'         shift, and enter state 16
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25

	Id             goto state 5
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 31

State 18

	Type -> 'double' .                                  (rule 113)

	'&'            reduce using rule 113
	')'            reduce using rule 113
	','            reduce using rule 113
	'>'            reduce using rule 113
	L_Id           reduce using rule 113


State 19

	Def -> 'inline' . Fun                               (rule 14)

	'bool'         shift, and enter state 16
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25

	Id             goto state 5
	Fun            goto state 29
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 30

State 20

	Type -> 'int' .                                     (rule 112)

	'&'            reduce using rule 112
	')'            reduce using rule 112
	','            reduce using rule 112
	'>'            reduce using rule 112
	L_Id           reduce using rule 112


State 21

	Str -> 'struct' . Id '{' ListDec '}'                (rule 21)

	L_Id           shift, and enter state 25

	Id             goto state 28

State 22

	TDef -> 'typedef' . Type Id                         (rule 20)

	'bool'         shift, and enter state 16
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25

	Id             goto state 5
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 27

State 23

	Def -> 'using' . QConst ';'                         (rule 13)

	L_Id           shift, and enter state 25

	Id             goto state 5
	Const          goto state 12
	QConst         goto state 26
	ListConst      goto state 14

State 24

	Type -> 'void' .                                    (rule 110)

	'&'            reduce using rule 110
	')'            reduce using rule 110
	','            reduce using rule 110
	'>'            reduce using rule 110
	L_Id           reduce using rule 110


State 25

	Id -> L_Id .                                        (rule 5)

	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&'            reduce using rule 5
	'&&'           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	'+='           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'-='           reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'/'            reduce using rule 5
	':'            reduce using rule 5
	'::'           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<<'           reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'>>'           reduce using rule 5
	'?'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'{'            reduce using rule 5
	'||'           reduce using rule 5
	L_Id           reduce using rule 5


State 26

	Def -> 'using' QConst . ';'                         (rule 13)

	';'            shift, and enter state 49


State 27

	TDef -> 'typedef' Type . Id                         (rule 20)
	Type -> Type . '&'                                  (rule 115)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 25

	Id             goto state 48

State 28

	Str -> 'struct' Id . '{' ListDec '}'                (rule 21)

	'{'            shift, and enter state 47


State 29

	Def -> 'inline' Fun .                               (rule 14)

	'bool'         reduce using rule 14
	'const'        reduce using rule 14
	'double'       reduce using rule 14
	'inline'       reduce using rule 14
	'int'          reduce using rule 14
	'struct'       reduce using rule 14
	'typedef'      reduce using rule 14
	'using'        reduce using rule 14
	'void'         reduce using rule 14
	L_Id           reduce using rule 14
	%eof           reduce using rule 14


State 30

	Fun -> Type . Id '(' ListArg ')' ';'                (rule 15)
	Fun -> Type . Id '(' ListArg ')' '{' ListStm '}'    (rule 16)
	Type -> Type . '&'                                  (rule 115)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 25

	Id             goto state 46

State 31

	Dec -> 'const' Type . Id                            (rule 25)
	Dec -> 'const' Type . Id '=' Exp                    (rule 27)
	Type -> Type . '&'                                  (rule 115)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 25

	Id             goto state 45

State 32

	Fun -> Type Id . '(' ListArg ')' ';'                (rule 15)
	Fun -> Type Id . '(' ListArg ')' '{' ListStm '}'    (rule 16)
	Dec -> Type Id .                                    (rule 24)
	Dec -> Type Id . '=' Exp                            (rule 26)
	Var -> Type Id . ',' ListId                         (rule 32)

	'('            shift, and enter state 42
	','            shift, and enter state 43
	';'            reduce using rule 24
	'='            shift, and enter state 44


State 33

	Type -> Type '&' .                                  (rule 115)

	'&'            reduce using rule 115
	')'            reduce using rule 115
	','            reduce using rule 115
	'>'            reduce using rule 115
	L_Id           reduce using rule 115


State 34

	ListConst -> Const '::' . ListConst                 (rule 107)

	L_Id           shift, and enter state 25

	Id             goto state 5
	Const          goto state 12
	ListConst      goto state 41

State 35

	Def -> Var ';' .                                    (rule 11)

	'bool'         reduce using rule 11
	'const'        reduce using rule 11
	'double'       reduce using rule 11
	'inline'       reduce using rule 11
	'int'          reduce using rule 11
	'struct'       reduce using rule 11
	'typedef'      reduce using rule 11
	'using'        reduce using rule 11
	'void'         reduce using rule 11
	L_Id           reduce using rule 11
	%eof           reduce using rule 11


State 36

	Def -> Str ';' .                                    (rule 12)

	'bool'         reduce using rule 12
	'const'        reduce using rule 12
	'double'       reduce using rule 12
	'inline'       reduce using rule 12
	'int'          reduce using rule 12
	'struct'       reduce using rule 12
	'typedef'      reduce using rule 12
	'using'        reduce using rule 12
	'void'         reduce using rule 12
	L_Id           reduce using rule 12
	%eof           reduce using rule 12


State 37

	Def -> TDef ';' .                                   (rule 10)

	'bool'         reduce using rule 10
	'const'        reduce using rule 10
	'double'       reduce using rule 10
	'inline'       reduce using rule 10
	'int'          reduce using rule 10
	'struct'       reduce using rule 10
	'typedef'      reduce using rule 10
	'using'        reduce using rule 10
	'void'         reduce using rule 10
	L_Id           reduce using rule 10
	%eof           reduce using rule 10


State 38

	Const -> Id '<' . ListType '>'                      (rule 103)

	'bool'         shift, and enter state 16
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25

	Id             goto state 5
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	ListType       goto state 39
	Type           goto state 40

State 39

	Const -> Id '<' ListType . '>'                      (rule 103)

	'>'            shift, and enter state 92


State 40

	ListType -> Type .                                  (rule 108)
	ListType -> Type . ',' ListType                     (rule 109)
	Type -> Type . '&'                                  (rule 115)

	'&'            shift, and enter state 33
	','            shift, and enter state 91
	'>'            reduce using rule 108


State 41

	ListConst -> Const '::' ListConst .                 (rule 107)

	'!='           reduce using rule 107
	'%'            reduce using rule 107
	'&'            reduce using rule 107
	'&&'           reduce using rule 107
	')'            reduce using rule 107
	'*'            reduce using rule 107
	'+'            reduce using rule 107
	'++'           reduce using rule 107
	'+='           reduce using rule 107
	','            reduce using rule 107
	'-'            reduce using rule 107
	'-='           reduce using rule 107
	'->'           reduce using rule 107
	'.'            reduce using rule 107
	'/'            reduce using rule 107
	':'            reduce using rule 107
	';'            reduce using rule 107
	'<'            reduce using rule 107
	'<<'           reduce using rule 107
	'<='           reduce using rule 107
	'='            reduce using rule 107
	'=='           reduce using rule 107
	'>'            reduce using rule 107
	'>='           reduce using rule 107
	'>>'           reduce using rule 107
	'?'            reduce using rule 107
	']'            reduce using rule 107
	'||'           reduce using rule 107
	L_Id           reduce using rule 107


State 42

	Fun -> Type Id '(' . ListArg ')' ';'                (rule 15)
	Fun -> Type Id '(' . ListArg ')' '{' ListStm '}'    (rule 16)

	')'            reduce using rule 17
	'bool'         shift, and enter state 16
	'const'        shift, and enter state 90
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	L_Id           shift, and enter state 25

	Id             goto state 5
	ListArg        goto state 86
	Dec            goto state 87
	Arg            goto state 88
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 89

State 43

	Var -> Type Id ',' . ListId                         (rule 32)

	L_Id           shift, and enter state 25

	Id             goto state 84
	ListId         goto state 85

State 44

	Dec -> Type Id '=' . Exp                            (rule 26)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'throw'        shift, and enter state 80
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 81
	L_charac       shift, and enter state 82
	L_quoted       shift, and enter state 83
	L_Id           shift, and enter state 25

	Integer        goto state 52
	Double         goto state 53
	Char           goto state 54
	String         goto state 55
	Id             goto state 56
	Exp16          goto state 57
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 68
	Exp1           goto state 69
	ListString     goto state 70
	Exp            goto state 71
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	Const          goto state 12
	QConst         goto state 75
	ListConst      goto state 14

State 45

	Dec -> 'const' Type Id .                            (rule 25)
	Dec -> 'const' Type Id . '=' Exp                    (rule 27)

	')'            reduce using rule 25
	','            reduce using rule 25
	';'            reduce using rule 25
	'='            shift, and enter state 51


State 46

	Fun -> Type Id . '(' ListArg ')' ';'                (rule 15)
	Fun -> Type Id . '(' ListArg ')' '{' ListStm '}'    (rule 16)

	'('            shift, and enter state 42


State 47

	Str -> 'struct' Id '{' . ListDec '}'                (rule 21)

	'bool'         reduce using rule 22
	'const'        reduce using rule 22
	'double'       reduce using rule 22
	'int'          reduce using rule 22
	'void'         reduce using rule 22
	'}'            reduce using rule 22
	L_Id           reduce using rule 22

	ListDec        goto state 50

State 48

	TDef -> 'typedef' Type Id .                         (rule 20)

	';'            reduce using rule 20


State 49

	Def -> 'using' QConst ';' .                         (rule 13)

	'bool'         reduce using rule 13
	'const'        reduce using rule 13
	'double'       reduce using rule 13
	'inline'       reduce using rule 13
	'int'          reduce using rule 13
	'struct'       reduce using rule 13
	'typedef'      reduce using rule 13
	'using'        reduce using rule 13
	'void'         reduce using rule 13
	L_Id           reduce using rule 13
	%eof           reduce using rule 13


State 50

	Str -> 'struct' Id '{' ListDec . '}'                (rule 21)
	ListDec -> ListDec . Dec ';'                        (rule 23)

	'bool'         shift, and enter state 16
	'const'        shift, and enter state 17
	'double'       shift, and enter state 18
	'int'          shift, and enter state 20
	'void'         shift, and enter state 24
	'}'            shift, and enter state 132
	L_Id           shift, and enter state 25

	Id             goto state 5
	Dec            goto state 130
	Const          goto state 12
	QConst         goto state 13
	ListConst      goto state 14
	Type           goto state 131

State 51

	Dec -> 'const' Type Id '=' . Exp                    (rule 27)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'throw'        shift, and enter state 80
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 81
	L_charac       shift, and enter state 82
	L_quoted       shift, and enter state 83
	L_Id           shift, and enter state 25

	Integer        goto state 52
	Double         goto state 53
	Char           goto state 54
	String         goto state 55
	Id             goto state 56
	Exp16          goto state 57
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 68
	Exp1           goto state 69
	ListString     goto state 70
	Exp            goto state 129
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	Const          goto state 12
	QConst         goto state 75
	ListConst      goto state 14

State 52

	Exp16 -> Integer .                                  (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	'++'           reduce using rule 48
	'+='           reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'-='           reduce using rule 48
	'->'           reduce using rule 48
	'.'            reduce using rule 48
	'/'            reduce using rule 48
	':'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<<'           reduce using rule 48
	'<='           reduce using rule 48
	'='            reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'>>'           reduce using rule 48
	'?'            reduce using rule 48
	']'            reduce using rule 48
	'||'           reduce using rule 48


State 53

	Exp16 -> Double .                                   (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	'++'           reduce using rule 49
	'+='           reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'-='           reduce using rule 49
	'->'           reduce using rule 49
	'.'            reduce using rule 49
	'/'            reduce using rule 49
	':'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<<'           reduce using rule 49
	'<='           reduce using rule 49
	'='            reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'>>'           reduce using rule 49
	'?'            reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49


State 54

	Exp16 -> Char .                                     (rule 50)
